# side-a

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  discogs.py  homeassistant.py  identify.py  intro.py  listening.py  main.py  nowplaying.py  pipeline.py  scrobble.py  tts.py
app/static/: now.html
scripts/: deploy-nas.sh  identify_image.py  lastfm_auth.py
