[project]
name = "side-a"
version = "0.1.0"
description = "Hold a record to a camera; it identifies the album, scripts a DJ intro, plays it on a HomePod via Home Assistant, and logs the play."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "elevenlabs>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "requests>=2.31",
    "rapidfuzz>=3.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
side-a-sync = "app.discogs:main"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
